2011-04-28  David Kilzer  <ddkilzer@apple.com>

        Follow-up fix: <http://webkit.org/b/59727> -[WebPDFView menuForEvent:] leaks NSMenuItem objects

        Addresses review comment from Darin Adler.

        * WebView/WebPDFView.mm:
        (-[WebPDFView menuForEvent:]): Use a local variable and -release
        instead of -autorelease.

2011-04-28  Anders Carlsson  <andersca@apple.com>

        Fix a thinko - separateRealmLabel is not an NSImageView.

        * Panels/WebAuthenticationPanel.h:

2011-04-28  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/59727> -[WebPDFView menuForEvent:] leaks NSMenuItem objects

        Reviewed by Dan Bernstein.

        * WebView/WebPDFView.mm:
        (-[WebPDFView menuForEvent:]): Call -autorelease after copying
        each NSMenuItem.  Regressed in r9566 for Bug 3711.

2011-04-28  Enrica Casucci  <enrica@apple.com>

        Reviewed by Beth Dakin.

        Momentum scroll tweak for WebKit.
        https://bugs.webkit.org/show_bug.cgi?id=59723
        <rdar://problem/9259933>

        * WebView/WebDynamicScrollBarsView.mm:
        (-[WebDynamicScrollBarsView scrollWheel:]): Changed constant.

2011-04-27  Anders Carlsson  <andersca@apple.com>

        Follow-up Leopard build fix.

        * Carbon/HIViewAdapter.m:
        (_webkit_NSView_setNeedsDisplayInRect):

2011-04-27  Anders Carlsson  <andersca@apple.com>

        More clang++ 32-bit build fixes.

        * Carbon/CarbonWindowAdapter.mm:
        (-[CarbonWindowAdapter reconcileToCarbonWindowBounds]):
        (-[CarbonWindowAdapter setContentView:]):
        (-[CarbonWindowAdapter _handleContentBoundsChanged]):
        * Carbon/HIViewAdapter.m:
        (_webkit_NSView_setNeedsDisplayInRect):
        * Panels/WebAuthenticationPanel.h:
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView convertFromX:andY:space:toX:andY:space:]):
        * Plugins/WebNetscapePluginEventHandlerCarbon.mm:
        (getCarbonEvent):